// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton calls onClick method when clicked 1`] = `
<div>
  <button
    class="btn form-submit-btn"
    type="submit"
  >
    Click Me
  </button>
</div>
`;

exports[`ActionButton renders correctly with custom props 1`] = `
<div>
  <button
    class="btn form-submit-btn extra-class"
    type="submit"
  >
    Go
  </button>
</div>
`;

exports[`ActionButton renders correctly with default props 1`] = `
<div>
  <button
    class="btn form-submit-btn"
    type="submit"
  >
    Submit
  </button>
</div>
`;
